# core

./: DISTRIBUTION_STRATEGY.md  README.md  docker-compose.yml  install.sh  package.json  zippycoin-node-linux-amd64
clients/: PRODUCTION_DEPLOYMENT.md  README.md  docker-compose.yml  transaction-service.js  trust-engine-service.js
clients/api-gateway/: package.json  tsconfig.json
clients/blockchain-core/: Cargo.toml
clients/blockchain-core/compliance/: mod.rs
clients/blockchain-core/consensus/: hybrid.rs  mod.rs
clients/blockchain-core/src/: edge_settlement.rs  lib.rs  tokenomics.rs
clients/blockchain-core/src/bridge/: mod.rs  oracle.rs
clients/blockchain-core/trust/: delegation.rs
clients/bridge-service/: package.json
clients/database/: package.json
clients/defi-service/: package.json
clients/governance-service/: package.json
clients/infrastructure/: deploy.sh  docker-compose.yml  genesis.json  init-databases.sh  launch-mainnet.sh  nginx.conf  prometheus.yml
clients/mobile-wallet/: .eslintrc.js  MOBILE_WALLET_SUMMARY.md  babel.config.js  jest.setup.js  metro.config.js  package.json  test-wallet.js  tsconfig.json
clients/monitoring/: Dockerfile  jest.config.ts  package.json  tsconfig.json
clients/nft-service/: package.json
clients/node-service/: package.json  tsconfig.json
clients/security/: SECURITY_AUDIT.md
clients/smart-contracts/: Dockerfile  TrustEngine.sol  debug-test.js  hardhat.config.cjs  package-lock.json  package.json
clients/trust-engine/: Dockerfile  README.md  package-lock.json  package.json
clients/wallet-service/: package.json
monitoring/: prometheus.yml
scripts/: detect-platform.sh  health-check.sh  setup-network.sh  update.sh
(+165 files in other folders)
